src/objects/Notification_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Private Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Notification Setting</relationshipLabel>
        <relationshipName>Notification_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Method__c</fullName>
        <label>Notification Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Notification Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Notification Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>